--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "react-native": "0.59.8",
     "react-native-extended-stylesheet": "^0.11.2",
     "react-native-gesture-handler": "^1.2.1",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "react-navigation-redux-helpers": "^3.0.2",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
