--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   },
   "dependencies": {
     "@gl/assets": "./assets",
+    "@gl/constant": "./src/constant",
     "@gl/screen": "./src/screen",
+    "@gl/store": "./src/store",
     "@gl/style": "./src/style",
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.11",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-extended-stylesheet": "^0.11.2",
@@ -24,7 +28,10 @@
     "react-navigation-redux-helpers": "^3.0.2",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
-    "redux-actions": "^2.6.5"
+    "redux-actions": "^2.6.5",
+    "redux-logger": "^3.0.6",
+    "redux-observable": "^1.1.0",
+    "rxjs": "^6.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
